PLAT-113765: Fix Scroller to set height correctly in PopupTabLayout when `focusableScrollbar` is byEnter (#607)
* PLAT-113765: Fix to set height of Scroller right in popupTabLayout
when focusableScrollbar is "byEnter"

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* reorder

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* added a changelog

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* fix

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* Added a qa sampler

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* fix

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

--- a/Scroller/Scroller.module.less
+++ b/Scroller/Scroller.module.less
@@ -5,10 +5,11 @@
 @import "../styles/variables.less";
 
 .focusableBody {
+	display: flex;
+	flex-direction: column;
 	width: 100%;
 	height: 100%;
-	position: relative;
-	padding: inherit;
+	overflow: inherit;
 
 	&::before {
 		content: '';
